:sparkles: creating activity to stimulated research

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ElectionPollApplication">
         <activity
-            android:name=".ResearchStimulated"
+            android:name=".StimulatedResearchView"
+            android:exported="false" />
+        <activity
+            android:name=".ResearchEstimated"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
