--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ gridlayout = "1.1.0"
 glide = "5.0.5"
 fragment = "1.8.9"
 playServicesLocation = "21.3.0"
+mpandroidchart = "3.1.0"
+
 
 
 [libraries]
@@ -34,6 +36,7 @@ glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "gl
 glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "glide" }
 fragment = { group = "androidx.fragment", name = "fragment", version.ref = "fragment" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+mpandroidchart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "mpandroidchart" }
 
 
 [plugins]
